--- a/Contactos.html
+++ b/Contactos.html
@@ -8,5 +8,6 @@
 <body>
     <h1>  Contactos de personas</h1>
     <header>este texto no deberia existir    </header>
+    <script src="js/app.js"></script>
 </body>
 </html>
